k8s/shareit.svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: shareit-svc
  namespace: shareit
  labels:
    app: shareit
spec:
  selector:
    app: shareit
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
